# LoMa

./: .gitignore  LICENSE  README.md  demo.py  eval.py  pyproject.toml
.github/actions/uv-build/: action.yml
.github/workflows/: build.yml  publish.yml
scripts/: eval_prep.sh
src/loma/: __init__.py  device.py  features.py  geometry.py  io.py  loma.py  loss.py  normalizers.py  random.py  types.py
src/loma/benchmarks/: __init__.py  mega.py  rubik.py  scannet.py  wxbs.py
src/loma/descriptor/: __init__.py  dedode.py
src/loma/descriptor/transformer/: __init__.py  dinov2.py
src/loma/descriptor/transformer/layers/: __init__.py  attention.py  block.py
src/loma/detector/: __init__.py  dad.py  utils.py
tests/: test_smoke.py  test_throughput.py  test_throughput_only_describe.py  test_throughput_only_detect.py  test_throughput_only_match.py
