[project]
name = "lomatch"
version = "1.0.0"
description = "A very good local feature matcher."
readme = "README.md"
authors = [
    { name = "Johan Edstedt", email = "johan.edstedt@liu.se" },
    { name = "David Nordström", email = "davnords@chalmers.se" }
]
requires-python = ">=3.10"
dependencies = [
    "dataclasses>=0.8",
    "einops>=0.8.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "torch",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "tyro",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "loma"

[project.optional-dependencies]
eval = [
    "wxbs-benchmark>=0.0.4",
    "scipy>=1.15.3",
]
dev = [
    "ruff",
    "pyright",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
# Optional imports (benchmark extras, poselib, etc.) are not always present in the dev env.
reportMissingImports = "none"
typeCheckingMode = "basic"
# Incomplete stubs for nn.Module indexing and dynamic third-party attributes.
reportIndexIssue = "none"
reportAttributeAccessIssue = "none"
# torchvision / vendor ViT: call signatures and general iteration on Module do not match stubs.
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportArgumentType = "none"
reportReturnType = "none"